--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>aspectjtools</artifactId>
       <version>1.9.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
